bar now fixed on mobile, dropdown wip

--- a/src/components/AnnouncementBar/AnnouncementBar.scss
+++ b/src/components/AnnouncementBar/AnnouncementBar.scss
@@ -5,8 +5,8 @@
     justify-content: center;
     align-content: center;
     width:100vw;
-    top:0;
-    position:relative;
+    top:0vh;
+    position:fixed;
     height:56px;
     background-color: $goldensun;
     z-index: 300;
@@ -28,7 +28,7 @@
     .AnnouncementBarContainer {
         top:19.2vw;
         height:calc(56px + 1vh);
-        position:absolute;
+        position:fixed;
     }
     .bannerMessage{
         padding-right:4px;
